Fixed z-indexes to all combinations fixed area #5947

--- a/src/css/handsontable.css
+++ b/src/css/handsontable.css
@@ -585,18 +585,18 @@ CheckboxRenderer
   background: #eee;
 }
 
-.ht_clone_left,
 .ht_clone_bottom {
-  z-index: 102;
+  z-index: 101;
 }
 
+.ht_clone_left,
 .ht_clone_bottom_left_corner {
-  z-index: 103;
+  z-index: 102;
 }
 
 .ht_clone_top_left_corner,
 .ht_clone_top {
-  z-index: 104;
+  z-index: 103;
 }
 
 .handsontable td.htSearchResult {
